@@ -61,6 +61,16 @@ module(load="omsentinel")
         {% endif -%}
         Key="filebeat_{{ frontend.tenants_config.id }}_{{ frontend.id }}"
         Mode="queue"
+        {%- if frontend.redis_tls_profile %}
+        use_tls="on"
+        {%- if frontend.redis_tls_profile.ca_cert and frontend.redis_tls_profile.verify_client != "none": %}
+        ca_cert_bundle="{{ frontend.redis_tls_profile.ca_cert.bundle_filename }}"
+        {%- endif %}
+        {%- if frontend.redis_tls_profile.x509_certificate %}
+        client_cert="{{ frontend.redis_tls_profile.x509_certificate.get_base_filename() }}.crt"
+        client_key="{{ frontend.redis_tls_profile.x509_certificate.get_base_filename() }}.key"
+        {%- endif %}
+        {%- endif %}
         Uselpop="on"
         batchsize="{{ frontend.redis_batch_size }}"
         RuleSet="{{ frontend.get_ruleset() }}")
@@ -87,6 +97,16 @@ module(load="omsentinel")
             Port="{{ frontend.redis_port }}"
             Key="{{ frontend.redis_key }}"
             Mode="{{ frontend.redis_mode }}"
+            {%- if frontend.redis_tls_profile %}
+            use_tls="on"
+            {%- if frontend.redis_tls_profile.ca_cert and frontend.redis_tls_profile.verify_client != "none": %}
+            ca_cert_bundle="{{ frontend.redis_tls_profile.ca_cert.bundle_filename }}"
+            {%- endif %}
+            {%- if frontend.redis_tls_profile.x509_certificate %}
+            client_cert="{{ frontend.redis_tls_profile.x509_certificate.get_base_filename() }}.crt"
+            client_key="{{ frontend.redis_tls_profile.x509_certificate.get_base_filename() }}.key"
+            {%- endif %}
+            {%- endif %}
             Uselpop="{% if frontend.redis_use_lpop %}on{% else %}off{% endif %}"
             {% if frontend.redis_password|length -%}
             Password="{{ frontend.redis_password }}"
