@@ -513,6 +513,16 @@ class Frontend(RsyslogQueue, models.Model):
         help_text=_("Default redis port is 6379"),
         verbose_name=_("Redis port to use")
     )
+    redis_tls_profile = models.ForeignKey(
+        TLSProfile,
+        on_delete=models.RESTRICT,
+        default=None,
+        null=True,
+        blank=True,
+        related_name="redis_frontends",
+        help_text=_("TLSProfile object to use."),
+        verbose_name=_("Redis TLS Profile to use")
+    )
     redis_key = models.TextField(
         default="vulture",
         help_text=_("The redis key you want to pop from the queue / the redis channel you want to subscribe to"),
